Added export button to export visible markdown document ot pdf file

--- a/testbar.kv
+++ b/testbar.kv
@@ -18,6 +18,9 @@
             text: "Reload"
             on_release: app.refresh(image)
         Button:
+            text: "Export to pdf"
+            on_release: app.export()
+        Button:
             text: "Prev Page"
             on_release: app.prev_img(image)
         Button:
